crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_import.md_-_Unresolved_import_diagnostics_-_Using_`from`_with_an_unknown_nested_module.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unresolved_import.md - Unresolved import diagnostics - Using `from` with an unknown nested module
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## mdtest_snippet.py

```
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error: unresolved-import: Cannot resolve imported module `.does_not_exist.foo.bar`
 --> src/mdtest_snippet.py:1:7
  |
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
  |       ^^^^^^^^^^^^^^^^^^^^^^
2 |
3 | stat = add(10, 15)
  |
info: `lint:unresolved-import` is enabled by default

```
