crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_import.md_-_Unresolved_import_di…_-_Using_`from`_with_a_…_(12d4a70b7fc67cc6).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unresolved_import.md - Unresolved import diagnostics - Using `from` with a resolvable module but unresolvable item
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## a.py

```
1 | does_exist1 = 1
2 | does_exist2 = 2
```

## mdtest_snippet.py

```
1 | from a import does_exist1, does_not_exist, does_exist2  # error: [unresolved-import]
```

# Diagnostics

```
error[unresolved-import]: Module `a` has no member `does_not_exist`
 --> src/mdtest_snippet.py:1:28
  |
1 | from a import does_exist1, does_not_exist, does_exist2  # error: [unresolved-import]
  |                            ^^^^^^^^^^^^^^
  |

```
