crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_bool_con…_-_Different_ways_that_…_-_TypeVar_has_an_upper…_(c47b930ed7da5310).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsupported_bool_conversion.md - Different ways that `unsupported-bool-conversion` can occur - TypeVar has an upper bound that doesn't support boolean conversion
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__ = None
3 | 
4 | def f[T: NotBoolable](x: T) -> T:
5 |     # error: [unsupported-bool-conversion]
6 |     if x:
7 |         pass
8 |     return x
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type variable `T@f` because upper bound `NotBoolable` doesn't implement `__bool__` correctly
 --> src/mdtest_snippet.py:6:8
  |
4 | def f[T: NotBoolable](x: T) -> T:
5 |     # error: [unsupported-bool-conversion]
6 |     if x:
  |        ^
7 |         pass
8 |     return x
  |
info: rule `unsupported-bool-conversion` is enabled by default

```
