crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_A_constrained_defaul…_(b62ed1f409042cc).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - A constrained default TypeVar's constraints must be a subset of the outer constraints
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Generic, TypeVar
 2 | 
 3 | T1 = TypeVar("T1", int, str)
 4 | T2 = TypeVar("T2", int, str, bool)
 5 | 
 6 | # OK: `T1`'s constraints ({int, str}) are a subset
 7 | # of `S`'s constraints ({int, str, bool})
 8 | S = TypeVar("S", int, str, bool, default=T1)
 9 | 
10 | # error: [invalid-type-variable-default]
11 | U = TypeVar("U", bool, complex, default=T1)
```

# Diagnostics

```
error[invalid-type-variable-default]: TypeVar default is inconsistent with the TypeVar's constraints
  --> src/mdtest_snippet.py:11:18
   |
11 | U = TypeVar("U", bool, complex, default=T1)
   |                  -------------          ^^ Constraint `int` of default `T1` is not one of the constraints of `U`
   |                  |
   |                  Constraints of `U`
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", int, str)
   | ---------------------------- `T1` defined here
   |

```
