crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_TypeVar_default_with…_(2582c3c1df422c25).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - TypeVar default with constrained outer (constrained default)
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Generic, TypeVar
 2 | 
 3 | T1 = TypeVar("T1", int, str)
 4 | T2 = TypeVar("T2", int, str, bool)
 5 | 
 6 | # OK: `T1`'s constraints ({int, str}) are a subset
 7 | # of `S`'s constraints ({int, str, bool})
 8 | S = TypeVar("S", int, str, bool, default=T1)
 9 | 
10 | # error: [invalid-type-variable-default]
11 | U = TypeVar("U", bool, complex, default=T1)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `T1` has constraint `int` that is not one of the outer TypeVar's constraints
  --> src/mdtest_snippet.py:11:41
   |
10 | # error: [invalid-type-variable-default]
11 | U = TypeVar("U", bool, complex, default=T1)
   |                                         ^^
   |
  ::: src/mdtest_snippet.py:3:1
   |
 1 | from typing import Generic, TypeVar
 2 |
 3 | T1 = TypeVar("T1", int, str)
   | ---------------------------- `T1` defined here
 4 | T2 = TypeVar("T2", int, str, bool)
   |
info: rule `invalid-type-variable-default` is enabled by default

```
