crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_TypeVar_default_with…_(7b4232303c010309).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - TypeVar default with bounded outer (constrained default)
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Generic, TypeVar
 2 | 
 3 | T1 = TypeVar("T1", int, str)
 4 | T2 = TypeVar("T2", int, bool)
 5 | 
 6 | # OK: `T1`'s constraints are `int` and `str,
 7 | # which are both assignable to `object`
 8 | S = TypeVar("S", default=T1, bound=object)
 9 | 
10 | # error: [invalid-type-variable-default] "Default type `T1` is not assignable to bound `int`"
11 | U = TypeVar("U", default=T1, bound=int)
12 | 
13 | # OK: `T2`'s constraints are `int` and `bool`,
14 | # which are both assignable to `int`
15 | V = TypeVar("V", default=T2, bound=int)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `T1` is not assignable to bound `int`
  --> src/mdtest_snippet.py:11:26
   |
10 | # error: [invalid-type-variable-default] "Default type `T1` is not assignable to bound `int`"
11 | U = TypeVar("U", default=T1, bound=int)
   |                          ^^
12 |
13 | # OK: `T2`'s constraints are `int` and `bool`,
   |
  ::: src/mdtest_snippet.py:3:1
   |
 1 | from typing import Generic, TypeVar
 2 |
 3 | T1 = TypeVar("T1", int, str)
   | ---------------------------- `T1` defined here
 4 | T2 = TypeVar("T2", int, bool)
   |
info: Constraint `str` of `T1` is not assignable to bound `int`
info: rule `invalid-type-variable-default` is enabled by default

```
